# xi-gtk

./: README.md  meson.build
data/: com.github.eyelash.xi-gtk.gresources.xml
src/: Application.c  Blinker.c  Config.vala  CoreConnection.c  EditView.c  EditViewContainer.c  FindBar.c  Line.c  LineCache.c  Notebook.c  Style.c  StyleMap.c  Theme.c  Utilities.c  Window.c  xi-gtk-resources.c  xi-gtk-resources.h
